# f1-nexus

./: F1_STRATEGY_OPTIMIZER_ARCHITECTURE.md  RUVNET_CRATES_ANALYSIS.md
f1-nexus/: .gitignore  Cargo.toml  F1_NEXUS_IMPLEMENTATION_SUMMARY.md  GITHUB_SEO_CONFIG.md  LICENSE-MIT  PUBLISHED.md  PUBLISHING.md  QUICK-START.md  README.md  RELEASE-ROADMAP.md  STATUS.md  TRENDING_TOPICS_ANALYSIS.md  agentdb.db  index.js  package.json
f1-nexus/.hive-mind/: config.json  hive.db
f1-nexus/crates/f1-nexus-agentdb/: Cargo.toml
f1-nexus/crates/f1-nexus-agentdb/src/: lib.rs
f1-nexus/crates/f1-nexus-agents/: Cargo.toml
f1-nexus/crates/f1-nexus-agents/src/: lib.rs
f1-nexus/crates/f1-nexus-bench/: Cargo.toml
f1-nexus/crates/f1-nexus-bench/benches/: strategy.rs  telemetry.rs
f1-nexus/crates/f1-nexus-cli/: Cargo.toml  README.md
f1-nexus/crates/f1-nexus-cli/src/: main.rs
f1-nexus/crates/f1-nexus-cli/src/commands/: mod.rs  optimize.rs  simulate.rs
f1-nexus/crates/f1-nexus-core/: Cargo.toml  README.md
f1-nexus/crates/f1-nexus-core/src/: fuel.rs  lib.rs  race.rs  regulations.rs  strategy.rs  telemetry.rs  tire.rs  track.rs  types.rs  weather.rs
f1-nexus/crates/f1-nexus-core/src/api/: mod.rs  openf1.rs
f1-nexus/crates/f1-nexus-mcp/: Cargo.toml  README.md
f1-nexus/crates/f1-nexus-mcp/src/: lib.rs  server.rs  sse.rs  stdio.rs  tools.rs  weather_api.rs
f1-nexus/crates/f1-nexus-node/: Cargo.toml  README.md  f1-nexus-node.linux-x64-gnu.node  index.d.ts  index.js  package.json
f1-nexus/crates/f1-nexus-node/src/: lib.rs
f1-nexus/crates/f1-nexus-physics/: Cargo.toml
f1-nexus/crates/f1-nexus-physics/src/: lib.rs
f1-nexus/crates/f1-nexus-strategy/: Cargo.toml  README.md
f1-nexus/crates/f1-nexus-strategy/src/: lib.rs  simulation.rs
f1-nexus/crates/f1-nexus-telemetry/: Cargo.toml
f1-nexus/crates/f1-nexus-telemetry/src/: anomaly.rs  buffer.rs  lib.rs  predictor.rs  processor.rs  stream.rs  websocket.rs
f1-nexus/crates/f1-nexus-vectors/: Cargo.toml
f1-nexus/crates/f1-nexus-vectors/src/: lib.rs
f1-nexus/crates/f1-nexus-wasm/: Cargo.toml  README.md
f1-nexus/crates/f1-nexus-wasm/src/: lib.rs
f1-nexus/crates/f1-nexus-weather/: Cargo.toml
f1-nexus/crates/f1-nexus-weather/src/: api.rs  lib.rs
f1-nexus/docs/: API.md  EXAMPLES.md
f1-nexus/memory/: claude-flow@alpha-data.json
f1-nexus/memory/agents/: README.md
f1-nexus/memory/sessions/: README.md
f1-nexus/scripts/: publish-crates.sh  publish-npm.sh
