[package]
name = "f1-nexus-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "F1 Nexus CLI - Command-line interface for F1 strategy optimization"

[[bin]]
name = "f1-nexus"
path = "src/main.rs"

[dependencies]
f1-nexus-core = { version = "1.0.0-alpha.2", path = "../f1-nexus-core" }
f1-nexus-telemetry = { version = "1.0.0-alpha.2", path = "../f1-nexus-telemetry" }
f1-nexus-strategy = { version = "1.0.0-alpha.2", path = "../f1-nexus-strategy" }
f1-nexus-mcp = { version = "1.0.0-alpha.2", path = "../f1-nexus-mcp" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
