[package]
name = "f1-nexus-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol (MCP) server for F1 Nexus"

[dependencies]
f1-nexus-core = { path = "../f1-nexus-core" }
f1-nexus-telemetry = { path = "../f1-nexus-telemetry" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
