[package]
name = "f1-nexus-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "F1 Nexus NAPI-RS bindings for Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
f1-nexus-core = { version = "1.0.0-alpha.2", path = "../f1-nexus-core" }
f1-nexus-telemetry = { version = "1.0.0-alpha.2", path = "../f1-nexus-telemetry" }
f1-nexus-strategy = { version = "1.0.0-alpha.2", path = "../f1-nexus-strategy" }

napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
napi-build = "2"
