[package]
name = "f1-nexus-weather"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
f1-nexus-core = { version = "1.0.0-alpha.1", path = "../f1-nexus-core" }
serde = { workspace = true }
